--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "A simple helpful robot for your Company",
   "dependencies": {
     "axios": "^0.18.0",
+    "cheerio-httpcli": "^0.7.2",
     "hubot": "^2.19.0",
     "hubot-slack": "^4.4.0",
     "yargs": "^11.0.0"
