--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cheerio-httpcli": "^0.7.2",
+    "generate-password": "^1.4.0",
     "hubot": "^2.19.0",
     "hubot-slack": "^4.4.0",
     "yargs": "^11.0.0"
